attempts to fix overflow

--- a/themes/dplayzgames06WebCore/static/style/main.css
+++ b/themes/dplayzgames06WebCore/static/style/main.css
@@ -219,6 +219,7 @@ div#pagecomments{background-color: #fff;}
 	}
 	/*pageheader-dark | Page header style*/
 	.navbar {
+		z-index:100;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
